# birth-rate-prediction

./: Blog Entry.md  Makefile  README.md  dvc.yaml  pyproject.toml
data/: .gitignore
data/raw/: .gitignore
data/tmp/: .gitignore
notebooks/: 20-creating-datasources.ipynb  Exploratory Analysis.ipynb
