[tool.poetry]
name = "birth-rate-prediction"
version = "0.1.0"
description = ""
authors = ["Héctor Cuevas"]

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^2.15.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
pre-commit = "^2.19.0"
black = "^22.6.0"
pandas = "^1.4.3"
jupyter-contrib-nbextensions = "^0.5.1"
dask = "^2022.7.1"
jupyterlab = "^3.4.4"
jupyterlab_code_formatter="^1.5.1"
isort = "^5.10.1"
bokeh = "^2.4.3"
jupyter_bokeh = "^3.0.4"
 
[tool.poetry.dev-dependencies] 
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
